updated logo color

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -239,6 +239,7 @@ input[type=number] {
 
 /* Header logo styling */
 .logo-home {
+    margin-bottom: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
